# Python-App-Template

./: Makefile  README.md  cookiecutter.json  environment.yml  pyproject.toml  requirements.txt
app_name/: __init__.py  __main__.py  utils.py
docs/source/: conf.py  usage.rst
emmapp/: __init__.py  __main__.py
scripts/: build.sh
test/: test.ipynb
{{cookiecutter.app_slug}}/: .bumpversion.cfg  Makefile  environment.yml  pyproject.toml
{{cookiecutter.app_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.app_slug}}/notebooks/: analytics.ipynb
{{cookiecutter.app_slug}}/{{cookiecutter.app_slug}}/: __init__.py  __main__.py  _version.py
{{cookiecutter.project_name}}/: .env.example  Makefile  pyproject.toml
{{cookiecutter.project_name}}/docker/: Dockerfile.jupyter
{{cookiecutter.project_name}}/notebooks/: notebook.ipynb
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py  __main__.py  config.py
