[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.app_slug}}"
description = "Um template para começar o desenvolvimento de apps"
readme = "README.md"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
keywords = ["template", "app"]
requires-python = ">=3.9"
dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = ["{{cookiecutter.app_slug}}"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.app_slug}}.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.scripts]
{{cookiecutter.app_slug}} = "{{cookiecutter.app_slug}}.__main__:main"
